[tool.poetry]
name = "proj2"
version = "0.1.0"
description = ""
authors = ["kalavakuntaBHAV <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Waitress = "^0.0.1"
opencv-python = "^4.5.3"
Flask = "^2.0.1"
py-dotenv = "^0.1"
csv2postgresql = "^0.1.2"
flask-postgresql-wrapper = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
